<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Purple Sprite</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="test_title">I am the title</string>
    <string name="test_summary">I am the cheese</string>
    <string name="dlg_ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="help_label">Help &amp; feedback</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="extra">Extra</string>
    <string name="ui_title">Interface</string>
    <string name="notifications_title">Notifications</string>
    <string name="sounds_title">Sounds</string>
    <string name="lockscreen_title">Lockscreen</string>
    <string name="navigation_title">Navigation</string>
    <string name="statusbar_title">Statusbar</string>
    <string name="recents_title">Recents</string>
    <string name="powermenu_title">PowerMenu</string>
    <string name="lights_title">Lights</string>
    <string name="about_title">About Screw\'d</string>
    <string name="changelog_title">Changelog</string>
    <string name="welcome">Welcome to Purple Sprite! Nothing to see right here, slide the navigation drawer to access the goods!</string>
    <string name="press_back_again">Press back again to leave</string>
    <string name="header_customize">Customize</string>
    <string name="header_category_screwd">Screw\'d Settings</string>
    <string name="ui">User Interface</string>
    <string name="system">System</string>
    <string name="notifications">Notifications</string>
    <string name="misc">Misc</string>
    <string name="navbar_navring">NavBar</string>
    <string name="headsup">Heads Up</string>
    <string name="power_menu">Power Menu</string>
    <string name="recents">Recents</string>
    <string name="lockscreen">Lockscreen</string>
    <string name="statusbar">Statusbar</string>
    <string name="sounds">Sounds &amp; Volume</string>
    <string name="kernel_tweaker">Kernel Adiutor</string>
    <string name="bitsyko_layers">Layers</string>
    <string name="disabled">Disabled</string>
    <string name="sound_buttons_cat">Buttons</string>
    <string name="interface_navbar_cat">NavBar options</string>
    <string name="display_category_led_title">LED lights</string>
    <string name="battery_title">Battery</string>
    <string name="battery2_summary">Customize battery icons and percentage</string>
    <string name="notification_drawer_cat">Notification Drawer</string>
    <string name="lockscreen_options_title">Lockscreen options</string>
    <string name="navbar_slimdim_cat">SlimDim</string>
    <string name="lockscreen_shortcuts_cat">Shortcuts</string>
    <string name="statusbar_clock_cat">Clock options</string>
    <string name="statusbar_notif_cat">Notification options</string>
    <string name="statusbar_battery_cat">Battery options</string>
    <string name="statusbar_header_cat">Header options</string>
    <string name="statusbar_weather_cat">Weather options</string>
    <string name="statusbar_general_cat">General options</string>
    <string name="changelog_screwd_title">Changelog</string>
    <string name="changelog_screwd_error">Unable to load changelog</string>
    <string name="ok">OK</string>
    <string name="ok_string">Okay</string>
    <string name="reset">Reset</string>
    <string name="help">Help</string>
    <string name="add">Add</string>
    <string name="attention">Attention</string>
    <string name="enabled">Enabled</string>
    <string name="default_string">Default</string>
    <string name="delete">Delete</string>
    <string name="general">General</string>
    <string name="choose_app">Choose App</string>
    <string name="reset_message">Reset all entries to default?</string>
    <string name="reset_android">Android</string>
    <string name="reset_screwd">Screw\'d</string>
    <string name="positive_done">Done</string>
    <string name="dlg_reset_values_message">Reset values to\nAndroid- or Screwd default?</string>
    <string name="dlg_reset_android">Android</string>
    <string name="hidden_title">Hidden</string>
    <string name="customize_title">Customize</string>
    <string name="ripple_title">Ripple effect</string>
    <string name="colorize_ripple_title">Colorize ripple effect</string>
    <string name="colorize_ripple_dialog_title">Choose how to colorize the ripple effect</string>
    <string name="dlg_dslv_reset_message">Reset all entries to default?</string>
    <string name="dlg_reset_colors_message">Reset colors to\nAndroid- or Screwd default?</string>
    <string name="dlg_reset_screwd">Screwd</string>
    <string name="normal_title">Normal</string>
    <string name="position_title">Position</string>
    <string name="position_right_title">Right</string>
    <string name="position_centered_title">Centered</string>
    <string name="reset_paranoid">Paranoid</string>
    <string name="mod_version">Screw\'d version</string>
    <string name="mod_version_default">Unknown</string>
    <string name="build_date">Build date</string>
    <string name="build_date_default">2012-01-01-0000</string>
    <string name="hardware_info">Hardware info</string>
    <string name="device_rear_camera">Rear camera</string>
    <string name="device_front_camera">Front facing camera</string>
    <string name="device_screen_resolution">Screen resolution</string>
    <string name="gpu_info">GPU</string>
    <string name="cpu_info">CPU</string>
    <string name="chipset_info">Chipset</string>
    <string name="mem_info">Memory</string>
    <string name="volume_rocker_wake_title">Volume rocker wake</string>
    <string name="volume_rocker_wake_summary">Pressing the volume keys will wake your device</string>
    <string name="kill_app_longpress_back">Kill app back button</string>
    <string name="kill_app_longpress_back_summary">Kill the foreground app by long-pressing the back key</string>
    <string name="double_tap_sleep_nav_bar_title">Navigation bar</string>
    <string name="double_tap_sleep_nav_bar_summary">Double tap navigation bar to put the device to sleep</string>
    <string name="double_tap_to_sleep_title">Double-tap to sleep</string>
    <string name="double_tap_to_sleep_summary">Double-tap on the status bar or top third and bottom shortcut area of the lock screen to turn off the display</string>
    <string name="status_bar_battery_style_title">Battery status style</string>
    <string name="status_bar_battery_style_icon_portrait">Icon portrait</string>
    <string name="status_bar_battery_style_icon_landscape">Icon landscape</string>
    <string name="status_bar_battery_style_circle">Circle</string>
    <string name="status_bar_battery_style_dotted_circle">Dotted circle</string>
    <string name="status_bar_battery_style_text">Text</string>
    <string name="status_bar_battery_style_hidden">Hidden</string>
    <string name="status_bar_battery_percentage_title">Show battery percentage</string>
    <string name="status_bar_battery_percentage_dialog_title">Battery percentage</string>
    <string name="status_bar_battery_percentage_default">Hidden (default)</string>
    <string name="status_bar_battery_percentage_text_inside">Inside the icon</string>
    <string name="status_bar_battery_percentage_text_next">Next to the icon</string>
    <string name="edit_light_settings">Edit light settings</string>
    <string name="pulse_speed_title">Pulse length and speed</string>
    <string name="default_time">Normal</string>
    <string name="custom_time">Custom</string>
    <string name="dialog_delete_title">Delete</string>
    <string name="dialog_delete_message">Remove selected item?</string>
    <string name="pulse_length_always_on">Always on</string>
    <string name="pulse_length_very_short">Very short</string>
    <string name="pulse_length_short">Short</string>
    <string name="pulse_length_normal">Normal</string>
    <string name="pulse_length_long">Long</string>
    <string name="pulse_length_very_long">Very long</string>
    <string name="pulse_speed_very_fast">Very fast</string>
    <string name="pulse_speed_fast">Fast</string>
    <string name="pulse_speed_normal">Normal</string>
    <string name="pulse_speed_slow">Slow</string>
    <string name="pulse_speed_very_slow">Very slow</string>
    <string name="battery_light_title">Battery light</string>
    <string name="battery_low_pulse_title">Pulse if battery low</string>
    <string name="battery_light_list_title">Colors</string>
    <string name="battery_light_low_color_title">Battery low</string>
    <string name="battery_light_medium_color_title">Charging</string>
    <string name="battery_light_full_color_title">Fully charged</string>
    <string name="notification_light_title">Notification light</string>
    <string name="notification_light_general_title">General</string>
    <string name="notification_light_applist_title">Apps</string>
    <string name="notification_light_phonelist_title">Phone</string>
    <string name="notification_light_use_custom">Use custom values</string>
    <string name="notification_light_default_value">Default</string>
    <string name="notification_light_missed_call_title">Missed call</string>
    <string name="notification_light_voicemail_title">Voicemail</string>
    <string name="notification_light_screen_on">Lights with screen on</string>
    <string name="profile_reset_title">Reset</string>
    <string name="profiles_add">Add</string>
    <string name="profile_choose_app">Choose app</string>
    <string name="profile_applist_title">Applications</string>
    <string name="picker_activities">Activities</string>
    <string name="select_custom_app_title">Select custom app</string>
    <string name="select_custom_activity_title">Select custom activity</string>
    <string name="systemuituner">System UI Tuner</string>
    <string name="dialog_color_picker_title">Color Picker</string>
    <string name="press_color_to_apply">Press on color below to apply</string>
    <string name="palette_screwd_title">Screwd</string>
    <string name="palette_material_title">Material</string>
    <string name="palette_rgb_title">RGB</string>
    <string name="reset_android_title">Android default</string>
    <string name="reset_screwd_title">Screwd default</string>
    <string name="arrow_right">→</string>
    <string name="arrow_down">↓</string>
    <string name="hex">Hex:</string>
    <string name="hex_hint">#ff000000</string>
    <string name="set">Set</string>
    <string name="advanced_reboot_title">Advanced reboot</string>
    <string name="advanced_reboot_summary">When unlocked, include options in the power menu for rebooting into recovery, bootloader or performing a soft reboot</string>
    <string name="power_menu_title">Power menu</string>
    <string name="power_menu_power_title">Power off</string>
    <string name="power_menu_reboot_title">Reboot menu</string>
    <string name="lockscreen_wallpaper_title">Wallpaper</string>
    <string name="lockscreen_wallpaper_set_title">Set lock screen wallpaper</string>
    <string name="lockscreen_wallpaper_clear_title">Clear lock screen wallpaper</string>
    <string name="lock_screen_weather_settings_title">Weather options</string>
    <string name="lockscreen_see_through_title">Blur</string>
    <string name="lockscreen_see_through_summary">Blurs and displays the content behind your lockscreen</string>
    <string name="lockscreen_blur_radius">Blur effect intensity</string>
    <string name="media_art_title">Media cover art</string>
    <string name="media_art_summary">Enable media cover art on the lockscreen</string>
    <string name="lockscreen_shortcuts_title">Lockscreen Shortcuts</string>
    <string name="lockscreen_shortcuts_summary">Change the shortcuts on lockscreen to whatever you want</string>
    <string name="lockscreen_targets_message">Bottom shortcuts</string>
</resources>