<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen 
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:screwd="http://schemas.android.com/apk/res/com.mrapocalypse.purplesprite3">

    <PreferenceCategory
        android:key="locksystem_category"
        android:title="@string/lockscreen_shortcuts_cat">

        <PreferenceScreen
                 android:key="lockscreen_shortcuts"
                 android:fragment="com.mrapocalypse.purplesprite3.dslv.ActionListViewSettings"
                 android:summary="@string/lockscreen_shortcuts_summary"
                 android:title="@string/lockscreen_shortcuts_title">
             <extra android:name="actionMode" android:value="4" />
             <extra android:name="maxAllowedActions" android:value="20" />
             <extra android:name="disableLongpress" android:value="true" />
             <extra android:name="useAppPickerOnly" android:value="true" />
             <extra android:name="fragment" android:value="com.mrapocalypse.purplesprite3.fragments.LockscreenShortcutsFragment" />
        </PreferenceScreen>
	
	<PreferenceScreen
            android:title="@string/lockscreen_targets_message" >
            <intent
                android:targetPackage="com.android.systemui"
                android:targetClass="com.android.systemui.cm.LockscreenShortcutsActivity" />
        </PreferenceScreen>
	
    </PreferenceCategory>
    
    <PreferenceCategory
        android:key="lockscreen_wallpaper"
        android:title="@string/lockscreen_wallpaper_title" >

        <Preference
            android:key="lockscreen_wallpaper_set"
            android:title="@string/lockscreen_wallpaper_set_title"
            android:persistent="false"/>

        <Preference
            android:key="lockscreen_wallpaper_clear"
            android:title="@string/lockscreen_wallpaper_clear_title"
            android:persistent="false"/>

    </PreferenceCategory>
    
    <PreferenceCategory
        android:key="lockscreen_weather_cat"
        android:title="@string/lockscreen_options_title" >

        <com.mrapocalypse.purplesprite3.preferences.SystemSettingSwitchPreference
                android:key="lockscreen_see_through"
                android:title="@string/lockscreen_see_through_title"
                android:summary="@string/lockscreen_see_through_summary"
                android:defaultValue="false" />

        <com.mrapocalypse.purplesprite3.preferences.SeekBarPreference
                android:key="lockscreen_blur_radius"
                android:title="@string/lockscreen_blur_radius"
                android:max="25"
                screwd:minimum="0"
                screwd:unitsLeft=""
                screwd:unitsRight=""
                android:persistent="false"
                android:dependency="lockscreen_see_through" />

        <com.mrapocalypse.purplesprite3.preferences.SystemSettingSwitchPreference
            android:key="lockscreen_media_metadata"
            android:title="@string/media_art_title"
            android:summary="@string/media_art_summary"
            android:defaultValue="true" />

        <PreferenceScreen
                android:key="lockscreen_weather"
                android:title="@string/lock_screen_weather_settings_title"
                android:fragment="com.mrapocalypse.purplesprite3.LockScreenWeatherSetting" />

    </PreferenceCategory>
</PreferenceScreen>